# ZoomClient

./: AegisApp.py  AegisCrypt.py  CMakeLists.txt  GodModeEncryptor.py  NovaApp.py  encryptor.py  gui_encryptor.py  main.cpp  mmmxApp.py  pro_encryptor.py  requirements.txt  tasks.py  todo_app.py
.github/workflows/: build.yml
